--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://2300033185_Rakshitha:Rakshitha2006@cluster0.me0do.mongodb.net/
+MONGODB_URI=mongodb+srv://Adithya:Kpaa726@cluster0.bgzzc.mongodb.net/
